@@ -9,16 +9,16 @@
     </maintainer>
 <!--
     <title>
-      gedit Manual V2.2
+      gedit Manual V2.3
     </title>
 -->
     <title>
       gedit
     </title>    
     <date>
-      2002-08-01
+      2002-09-03
     </date>
-    <version identifier="2.2" date="2002-08-01" description="Updated for GNOME 2.0, program version 1.121.0"/>
+    <version identifier="2.3" date="2002-09-03" description="Updated for GNOME 2.0, program version 2.0.2"/>
     <subject category="GNOME|Applications|Accessories"/>
     <description>
       User manual for the gedit text editor. 
