@@ -2,9 +2,9 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "1.121.0">
-  <!ENTITY manrevision "2.2">
-  <!ENTITY date "August 2002">
+  <!ENTITY appversion "2.0.2">
+  <!ENTITY manrevision "2.3">
+  <!ENTITY date "September 2002">
   <!ENTITY app "gedit">
 ]>
 <!-- 
@@ -87,6 +87,15 @@
 		  </revdescription>
 		</revision>
 		<revision> 
+		  <revnumber>gedit Manual V2.2</revnumber>
+		  <date>August 2002</date> 
+		  <revdescription> 
+			 <para role="author">Sun GNOME Documentation Team
+				<email>gdocteam@sun.com</email> </para>
+			 <para role="publisher">GNOME Documentation Project</para>
+		  </revdescription>
+		</revision>
+		<revision> 
 		  <revnumber>gedit Manual V2.1</revnumber>
 		  <date>June 2002</date> 
 		  <revdescription> 
@@ -126,6 +135,7 @@
 	 </legalnotice>
   </articleinfo>
   <indexterm><primary>gedit</primary></indexterm>
+  <indexterm><primary>text editor</primary></indexterm>
 
 <!-- ============= Document Body ============================= -->
 <!-- ============= Introduction ============================== -->
@@ -232,8 +242,8 @@
 		  <application> &app;</application> window for each file that is open, drag the
 		  tab corresponding to each file to the desktop background. You can also use the
 		  <guimenu>Documents</guimenu> menu to move between the open files.</para>
-		<para>The application records the paths and filenames of the last
-		  four files that you edited and displays the files as menu items on the <menuchoice>
+		<para>The application records the paths and filenames of the five
+		  most recent files that you edited and displays the files as menu items on the <menuchoice>
 		  <guimenu>File</guimenu> <guisubmenu>Recent Files</guisubmenu> </menuchoice> menu. 
 		  </para>
 	 </sect2>
@@ -244,7 +254,7 @@
 		  and open a single file or multiple files. To open multiple files from a command
 		  line, type the following command, then press <keycap>Return</keycap>:</para>
 		<para><command>gedit <replaceable>file1.txt file2.txt file3.txt</replaceable></command></para>
-		<para>When the application starts, the files that you specified are
+		<para>When the application starts, the files that you specify are
 		  displayed in the <application>&app;</application> window.</para>
 	 </sect2>
   </sect1>
@@ -265,13 +275,10 @@
 		<title>To Save a File</title>
 		<para>You can save files in the following ways:</para>
 		<itemizedlist> 
-		  <listitem><para>To save changes to the current file, choose 
+		  <listitem><para>To save changes to an existing file, choose 
 				<menuchoice> <guimenu>File</guimenu>
 				  <guimenuitem>Save</guimenuitem> </menuchoice> or click <guibutton>Save</guibutton>
-				  on the toolbar. If the file does not have a filename, <application>&app;</application> 
-					 displays the <guilabel>Save As</guilabel> dialog. Enter a name for the file in the 
-<guilabel>Save
-				As</guilabel> dialog, then click <guibutton>OK</guibutton>.</para>
+				  on the toolbar. </para>
 		  </listitem>
 		  <listitem><para>To save a new file or to save an existing file under a new filename, choose 
 				<menuchoice> <guimenu>File</guimenu> <guimenuitem>Save
@@ -297,7 +304,7 @@
 		  </listitem>
 		  <listitem><para>Use the <guimenuitem>Cut</guimenuitem>,
 				<guimenuitem>Copy</guimenuitem>, <guimenuitem>Paste</guimenuitem>, and
-				<guimenuitem>Delete</guimenuitem> menu items to edit text. </para>
+				<guimenuitem>Delete</guimenuitem> menu items on the <guimenu>Edit</guimenu> to edit text. </para>
 		  </listitem>
 		</itemizedlist>
 		<para>When you select text with the mouse,
@@ -444,7 +451,7 @@
 		<keycap>Return</keycap>.</para>
 		</listitem>
 		</itemizedlist>
-		<para>The application opens the file located at the URI in readonly mode.</para>
+		<para>The application opens the file located at the URI in read-only mode.</para>
 	 </sect2>	 
 <!-- ============= To Pipe the Output of a Command to a File ======= -->
 	 <sect2 id="gedit-pipe-output"> 
@@ -524,8 +531,7 @@
 		  
 		<para>To preview the pages that you want to print, choose
 		<menuchoice> <guimenu>File</guimenu>
-		<guimenuitem>Print Preview</guimenuitem> </menuchoice>to display the <guilabel>gedit - Print Preview
-		</guilabel> dialog.</para>
+		<guimenuitem>Print Preview</guimenuitem> </menuchoice>.</para>
 		  
 		<para>To print the current file to a printer or a file, choose 
 		<menuchoice> <guimenu>File</guimenu>
@@ -553,21 +559,21 @@
 				is only available if you selected text.</para>
 				</listitem>								
 				</itemizedlist>
-				<para>Default: <guilabel>All</guilabel>.</para>
+				<!-- <para>Default: <guilabel>All</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Copies</guilabel> </term> 
 			 <listitem> 
 				<para>Use this spin box to specify the number of copies of the file that
 				you want to print.</para>
-				<para>Default: 1.</para>
+				<!-- <para>Default: 1.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Collate</guilabel> </term> 
 			 <listitem> 
 				<para>If you are printing multiple copies of the file, select this option
 				to collate the printed copies.</para>
-				<para>Default: unselected.</para>
+				<!-- <para>Default: unselected.</para> -->
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -580,14 +586,14 @@
 			 <listitem> 
 				<para>Use this drop-down list box to select the printer to which you want
 				to print the file.</para>
-				<para>Default: <guilabel>Gnome default printer</guilabel>.</para>
+				<!-- <para>Default: <guilabel>Gnome default printer</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Settings</guilabel> </term> 
 			 <listitem> 
 				<para>Use this drop-down list box to select the printer settings. To configure
 				the printer, click <guibutton>Configure</guibutton>.</para>
-				<para>Default: Default.</para>
+				<!-- <para>Default: Default.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Location</guilabel> </term> 
@@ -596,7 +602,7 @@
 				file to a printer, choose <guilabel>lpr</guilabel>. To print the file
 				to a print file, choose <guilabel>File</guilabel>. If you select <guilabel>File</guilabel>,
 				type the name of the output file in the text box provided.</para>
-				<para>Default: <guilabel>lpr</guilabel>.</para>
+				<!-- <para>Default: <guilabel>lpr</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -609,7 +615,7 @@
 			 <listitem> 
 				<para>Use this drop-down list box to select the size of the paper to 
 				which you want to print the file.</para>
-				<para>Default: <guilabel>A4</guilabel>.</para>
+				<!-- <para>Default: <guilabel>A4</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Width</guilabel> </term> 
@@ -617,19 +623,19 @@
 				<para>Use this spin box to specify the width of the paper. Use the
 				<guilabel>Centimeters</guilabel> drop-down list box to change the 
 				measurement unit for specifying the paper size.</para>
-				<para>Default: 21.00 centimeters.</para>
+				<!-- <para>Default: 21.00 centimeters.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Height</guilabel> </term> 
 			 <listitem> 
 				<para>Use this spin box to specify the height of the paper.</para>
-				<para>Default: 29.70 centimeters.</para>
+				<!-- <para>Default: 29.70 centimeters.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Page orientation</guilabel> </term> 
 			 <listitem> 
 				<para>Use this drop-down list box to select the page orientation.</para>
-				<para>Default: <guilabel>Portrait</guilabel>.</para>
+				<!-- <para>Default: <guilabel>Portrait</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Layout</guilabel> </term> 
@@ -637,7 +643,7 @@
 				<para>Use this drop-down list box to select the page layout. A preview
 				of each layout that you select is displayed in the <guilabel>Preview</guilabel>
 				area.</para>
-				<para>Default: <guilabel>Plain</guilabel>.</para>
+				<!-- <para>Default: <guilabel>Plain</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		</variablelist>
@@ -708,9 +714,10 @@
 		<para>To load <application>&app;</application> plugins, choose 
 		  <menuchoice> 
 		  <guimenu>Edit</guimenu>
-		  <guimenuitem>Plugin Manager</guimenuitem> 
-		  </menuchoice>. 
-		  The <guilabel>Plugin Manager</guilabel> dialog displays the following information:</para>
+		  <guimenuitem>Preferences</guimenuitem> 
+		  </menuchoice>. Click on the arrow next to the <guilabel>Plugins</guilabel> category, then click on 
+		  the <guilabel>Manager</guilabel> subcategory. 
+		  The <guilabel>Manager</guilabel> subcategory displays the following information:</para>
 		<itemizedlist> 
 		  <listitem><para>A list of the plugins that are available.</para>
 		  </listitem>
@@ -738,42 +745,50 @@
 		<tbody> 
 		<row valign="top"> 
 			<entry><para>ASCII table</para></entry> 
-			<entry><para><menuchoice><guimenu>View</guimenu> <guimenuitem>ASCII Table</guimenuitem></menuchoice></para></entry> 
+			<entry><para><menuchoice><guimenu>View</guimenu>
+			<guimenuitem>ASCII Table</guimenuitem></menuchoice></para></entry> 
 		</row>  
 		<row valign="top"> 
-			<entry><para>Compare files</para></entry> 
-			<entry><para><menuchoice><guimenu>File</guimenu> <guimenuitem>Compare files</guimenuitem></menuchoice></para></entry> 
-		</row>
-		<row valign="top"> 
 			<entry><para>CVS ChangeLog</para></entry> 
-			<entry><para><menuchoice><guimenu>File</guimenu> <guimenuitem>Open CVS ChangeLogs</guimenuitem></menuchoice></para></entry> 
+			<entry><para><menuchoice><guimenu>File</guimenu> 
+			<guimenuitem>Open CVS ChangeLogs</guimenuitem></menuchoice></para></entry> 
 		</row> 
 		<row valign="top"> 
+			<entry><para>Compare files</para></entry> 
+			<entry><para><menuchoice><guimenu>File</guimenu> 
+			<guimenuitem>Compare files</guimenuitem></menuchoice></para></entry> 
+		</row>
+		<row valign="top"> 
 			<entry><para>Word count</para></entry> 
-			<entry><para><menuchoice><guimenu>Search</guimenu> <guimenuitem>Word Count</guimenuitem></menuchoice></para></entry> 
+			<entry><para><menuchoice><guimenu>Search</guimenu> 
+			<guimenuitem>Word Count</guimenuitem></menuchoice></para></entry> 
+		</row> 
+		<row valign="top">
+			<entry><para>User name</para></entry> 
+			<entry><para><menuchoice><guimenu>Edit</guimenu> 
+			<guimenuitem>Insert User Name</guimenuitem></menuchoice></para></entry> 
 		</row> 
 		<row valign="top">
 			<entry><para>Shell Output</para></entry> 
-			<entry><para><menuchoice><guimenu>Edit</guimenu> <guimenuitem>Insert Shell Output</guimenuitem></menuchoice></para></entry> 
+			<entry><para><menuchoice><guimenu>Edit</guimenu> 
+			<guimenuitem>Insert Shell Output</guimenuitem></menuchoice></para></entry> 
 		</row> 
 		<row valign="top">
 			<entry><para>Tag list</para></entry> 
-			<entry><para><menuchoice><guimenu>View</guimenu> <guimenuitem>Tag List</guimenuitem></menuchoice></para></entry> 
+			<entry><para><menuchoice><guimenu>View</guimenu> 
+			<guimenuitem>Tag List</guimenuitem></menuchoice></para></entry> 
 		</row>
 		<row valign="top">
 			<entry><para>Insert Date/Time</para></entry> 
-			<entry><para><menuchoice><guimenu>Edit</guimenu> <guimenuitem>Insert Date/Time</guimenuitem></menuchoice></para></entry> 
+			<entry><para><menuchoice><guimenu>Edit</guimenu> 
+			<guimenuitem>Insert Date/Time</guimenuitem></menuchoice></para></entry> 
 		</row>
-		<row valign="top">
-			<entry><para>User name</para></entry> 
-			<entry><para><menuchoice><guimenu>Edit</guimenu> <guimenuitem>Insert User Name</guimenuitem></menuchoice></para></entry> 
-		</row> 
 		</tbody> 
 		</tgroup>
 		</informaltable> 
 
 		<para>To remove a plugin, deselect the check box next to the name of the plugin.</para>
-		<para>To close the <guilabel>Plugin Manager</guilabel> dialog,
+		<para>To close the <guilabel>Preferences</guilabel> dialog,
 		  click <guibutton>Close</guibutton>.</para>
 	 </sect2>
 	 
@@ -788,7 +803,7 @@
 		  <itemizedlist>
 		  <listitem>
 		  <para><guimenuitem>Desktop Default</guimenuitem></para>
-		  <para>Sisplay the default toolbar.</para>
+		  <para>Display the default toolbar.</para>
 		  </listitem>
 		  <listitem>
 		  <para><guimenuitem>Icon</guimenuitem></para>
@@ -800,21 +815,21 @@
 		  </listitem>
 		  </itemizedlist>
 	 <para>To display or hide the statusbar, choose <menuchoice> <guimenu>View</guimenu>
-		  <guimenuitem>Statusbar</guimenuitem> </menuchoice>. To customize how <application>&app;</application>
-		  displays the statusbar, choose <menuchoice> <guimenu>View</guimenu>
-		  <guisubmenu>Customize Statusbar</guisubmenu> </menuchoice>, then select one of the following 
-		  menu items:</para>
+	 <guimenuitem>Statusbar</guimenuitem> </menuchoice>. To customize how <application>&app;</application>
+	 displays the statusbar, choose <menuchoice> <guimenu>View</guimenu>
+	 <guisubmenu>Customize Statusbar</guisubmenu> </menuchoice>, then select one of the following 
+	 menu items:</para>
 		  <itemizedlist>
 		  <listitem>
 		  <para><guimenuitem>Show Cursor Position</guimenuitem></para>
 		  <para>Display the line number and column number where the cursor is located.</para>
-		  <para>Default: selected.</para>
+		  <!-- <para>Default: selected.</para> -->
 		  </listitem>
 		  <listitem>
 		  <para><guimenuitem>Show Overwrite Mode</guimenuitem></para>
 		  <para>Display the editing mode. If the editor is in insert mode, the statusbar contains the word INS. If the editor is in 
 		  overwrite mode, the statusbar contains the word OVR.</para>
-		  <para>Default: selected.</para>
+		  <!-- <para>Default: selected.</para> -->
 		  </listitem>
 		  </itemizedlist>
 	 
@@ -835,6 +850,8 @@
 		</listitem>
 		<listitem><para><xref linkend="gedit-prefs-print"/></para>
 		</listitem>
+		<listitem><para><xref linkend="gedit-prefs-plugins"/></para>
+		</listitem>
 	 </itemizedlist>
 	 
 	 
@@ -849,20 +866,20 @@
 		   <varlistentry> <term><guilabel>Use default theme font</guilabel> </term> 
 			 <listitem> 
 				<para>Select this option to use the default system font for the text in the <application>&app;</application> text window. </para>
-				<para>Default: unselected.</para>
+				<!-- <para>Default: unselected.</para> -->
 			 </listitem>
 		  	</varlistentry>			
 		   <varlistentry> <term><guilabel>Font used by the editor</guilabel> </term> 
 			 <listitem> 
 				<para>This field displays the font that <application>&app;</application> uses to display text. 
 				Click on the button to specify the font type, style, and size to use for text. </para>
-				<para>Default: Courier Medium 12 point.</para>
+				<!-- <para>Default: Courier Medium 12 point.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		   <varlistentry> <term><guilabel>Use default theme colors</guilabel> </term> 
 			 <listitem> 
 				<para>Select this option to use the default theme colors in the <application>&app;</application> text window. </para>
-				<para>Default: selected.</para>
+				<!-- <para>Default: selected.</para> -->
 			 </listitem>
 		  	</varlistentry>			
 		  	<varlistentry> <term><guilabel>Text color</guilabel> </term> 
@@ -870,7 +887,7 @@
 				<para>Click on the <guibutton>Text color</guibutton> button to
 				  display the color selector dialog. Select a color to use to display text in the <application>&app;</application>
 				text window. </para>
-				<para>Default: black.</para>
+				<!-- <para>Default: black.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Background color</guilabel> </term> 
@@ -878,7 +895,7 @@
 				<para>Click on the <guibutton>Background color</guibutton> button to
 				  display the color selector dialog. Select a background color for the <application>&app;</application>
 				text window. </para>
-				<para>Default: white.</para>
+				<!-- <para>Default: white.</para> -->
 			 </listitem>
 		  	</varlistentry>			
 		  	<varlistentry> <term><guilabel>Selected text color</guilabel> </term> 
@@ -886,7 +903,7 @@
 				<para>Click on the <guibutton>Selected text color</guibutton> button to
 				  display the color selector dialog. Select a color to use to display selected text.
 				</para>
-				<para>Default: white.</para>
+				<!-- <para>Default: white.</para> -->
 			 </listitem>
 		  	</varlistentry>
 		  	<varlistentry> <term><guilabel>Selection color</guilabel> </term> 
@@ -894,7 +911,7 @@
 				<para>Click on the <guibutton>Selection color</guibutton> button to
 				  display the color selector dialog. Select a background color to use to highlight a text selection.
 				  </para>
-				<para>Default: blue.</para>
+				<!-- <para>Default: blue.</para> -->
 			 </listitem>
 		  	</varlistentry>			
 			</variablelist>
@@ -908,7 +925,7 @@
 				<para>Use this spin box to specify the width of the space that
 				  <application> &app;</application> inserts when you press the
 				  <keycap>Tab</keycap> key. </para>
-				<para>Default: 8 characters.</para>
+				<!-- <para>Default: 8 characters.</para> -->
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -937,7 +954,7 @@
 				<para>Select this option to wrap text onto the next line, at a character level, when you reach the text window boundary.</para>
 				</listitem>								
 				</itemizedlist>
-				<para>Default: <guilabel>Wrap lines at character boundaries</guilabel>.</para>
+				<!-- <para>Default: <guilabel>Wrap lines at word boundaries</guilabel>.</para> -->
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -950,7 +967,7 @@
 			 <listitem> 
 				<para>Select this option to display lines numbers on the left side of the 
 				<application>&app;</application> window. </para>
-				<para>Default: unselected.</para>
+				<!-- <para>Default: unselected.</para> -->
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -962,15 +979,15 @@
 	 		<varlistentry> <term><guilabel>Create a backup copy of files before saving</guilabel> </term> 
 			 <listitem> 
 				<para>Select this option to create a backup copy of a file each time you save the file. The backup 
-				copy of the file has a <filename>.bak</filename> extension.</para>
-				<para>Default: unselected.</para>
+				copy of the file contains a tilde (~) at the end of the filename.</para>
+				<!-- <para>Default: selected.</para> -->
 			 </listitem>
 		  	</varlistentry>
 	 		<varlistentry> <term><guilabel>Autosave current file every</guilabel> </term> 
 			 <listitem> 
 				<para>Select this option to automatically save the current file at regular intervals. Use the spin box
 				to specify the interval at which you want to save the file.</para>
-				<para>Default: unselected, 10 minutes.</para>
+				<!-- <para>Default: unselected, 10 minutes.</para> -->
 			 </listitem>
 		  	</varlistentry>
 	 		<varlistentry> <term><guilabel>When saving</guilabel> </term> 
@@ -991,7 +1008,23 @@
 				<para>Select this option to save a file using the current locale if the file was already saved in the current locale.</para>
 				</listitem>								
 				</itemizedlist>
-				<para>Default: <guilabel>Always use UTF-8 encoding (faster)</guilabel></para>
+				<!-- <para>Default: <guilabel>Always use UTF-8 encoding (faster)</guilabel></para> -->
+			 </listitem>
+		  	</varlistentry>
+		  	<varlistentry> <term><guilabel>When creating a new file</guilabel> </term> 
+			 <listitem> 
+				<para>Select one of the following save options for new files:</para>
+				<itemizedlist>
+				<listitem>
+				<para><guilabel>Always use UTF-8 encoding (faster)</guilabel></para>
+				<para>Select this option to save new files using UTF-8 bit encoding.</para>
+				</listitem>
+				<listitem>
+				<para><guilabel>Use current locale's encoding if possible</guilabel></para>
+				<para>Select this option to save new files using the current locale. You can set up locales for
+				different input methods. </para>
+				</listitem>							
+				</itemizedlist>
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -1007,7 +1040,7 @@
 				<para>Select this option to set a limit on the number of editing actions that you 
 				can undo. Use the spin box to specify the maximum number of actions that you
 				can undo. </para>
-				<para>Default: selected, 25 actions.</para>
+				<!-- <para>Default: selected, 25 actions.</para> -->
 			 </listitem>
 		  	</varlistentry>
 			</variablelist>
@@ -1027,7 +1060,7 @@
 			 <listitem> 
 				<para>Select this option to include a header on each page that you
 				  print. You cannot configure the header. </para>
-				<para>Default: selected.</para>
+				<!-- <para>Default: selected.</para> -->
 			 </listitem>
 		  </varlistentry>
 		  <varlistentry> <term><guilabel>Wrap lines (at character boundaries)</guilabel> </term> 
@@ -1035,7 +1068,7 @@
 				<para>Select this option to automatically wrap text at a character level when you print
 				  a file. The application counts wrapped lines as one line for line numbering purposes.
 				  </para>
-				<para>Default: selected.</para>
+				<!-- <para>Default: selected.</para> -->
 			 </listitem>
 		  </varlistentry>
 		  <varlistentry> <term><guilabel>Print line numbers every</guilabel>
@@ -1044,7 +1077,7 @@
 				<para>Select this option to include line numbers when you print a
 				  file. Use the spin box to specify how often to print the line numbers, for
 				  example every 5 lines, every 10 lines, and so on. </para>
-				<para>Default: unselected, 1 line.</para>
+				<!-- <para>Default: unselected, 1 line.</para> -->
 			 </listitem>
 		  </varlistentry>
 		</variablelist>
@@ -1057,21 +1090,21 @@
 			 <listitem> 
 				<para>Click on this button to select the font to use to print the body text of a 
 				file.</para>
-				<para>Default: Courier 9.0.</para>
+				<!-- <para>Default: Courier 9.0.</para> -->
 			 </listitem>
 		  </varlistentry>
 		  <varlistentry> <term><guilabel>Font used to print headers</guilabel> </term> 
 			 <listitem> 
 				<para>Click on this button to select the font to use to print the headers in a 
 				file.  </para>
-				<para>Default: Helvetica 11.0.</para>
+				<!-- <para>Default: Helvetica 11.0.</para> -->
 			 </listitem>
 		  </varlistentry>
 		  <varlistentry> <term><guilabel>Font used to print line numbers</guilabel>
 			 </term> 
 			 <listitem> 
 				<para>Click on this button to select a font to use to print line numbers.</para>
-				<para>Default: Helvetica 8.0.</para>
+				<!-- <para>Default: Helvetica 8.0.</para> -->
 			 </listitem>
 		  </varlistentry>
 		</variablelist>
@@ -1080,7 +1113,12 @@
 		</sect3>
 		
 	 </sect2>	 
-	 	 	 
+
+	 <sect2 id="gedit-prefs-plugins">
+	 <title>Plugins</title>
+	 <para>For information about how to use the <guilabel>Plugins</guilabel> category 
+	 of the <guilabel>Preferences</guilabel> dialog, see <xref linkend="gedit-install-plugins"/>. </para>		
+	 </sect2>	 
 	 
  </sect1>
 </article>
