@@ -1,4 +1,10 @@
+2002-09-03  Irene Ryan <irene.ryan@sun.com>
 
+	* help/C/gedit.xml: updated to reflect changes to the
+	  UI and to fix bug #91026
+	* help/C/gedit-C.omf: updated to reflect new manual
+	  version and submission date
+	     
 2002-09-01  Marius Andreiana <mandreiana@yahoo.com>
 
 	* configure.in: added 'ro' to ALL_LINGUAS
